force-app/main/default/objects/NotificationTemplate__c/NotificationTemplate__c.object-meta.xml
<CustomObject>
    <label>通知テンプレート</label>
    <nameField>
        <displayFormat>T-{000000000}</displayFormat>
        <label>テンプレート一覧コード</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>