force-app/main/default/objects/NotificationTemplate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>通知テンプレート</relationshipLabel>
    <relationshipName>AccountNotificationTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>