force-app/main/default/objects/NotificationTemplate__c/fields/ApprovalContactCancelEmail__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactCancelEmail__c</fullName>
    <label>承認後連絡（解約精算）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>