force-app/main/default/objects/NotificationTemplate__c/fields/ApprovalContactCancelFeed__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactCancelFeed__c</fullName>
    <label>承認後連絡（解約精算）Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>