force-app/main/default/objects/NotificationTemplate__c/fields/ApprovalContactChangeEmail__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactChangeEmail__c</fullName>
    <label>承認後連絡（入替）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>