force-app/main/default/objects/NotificationTemplate__c/fields/ApprovalContactNMContractorChange__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNMContractorChange__c</fullName>
    <label>承認後連絡（新規/名変）Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>