force-app/main/default/objects/NotificationTemplate__c/fields/ApprovalContactNMEmail__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNMEmail__c</fullName>
    <label>承認後連絡（新規/通常）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>