force-app/main/default/objects/NotificationTemplate__c/fields/ApprovalContactNMParkingEmail__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNMParkingEmail__c</fullName>
    <label>承認後連絡（新規/駐車場）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>