force-app/main/default/objects/NotificationTemplate__c/fields/AutoCancelApplicationFeed__c.field-meta.xml
<CustomField>
    <fullName>AutoCancelApplicationFeed__c</fullName>
    <label>自動解約申入Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>