force-app/main/default/objects/NotificationTemplate__c/fields/BillingRequestMail__c.field-meta.xml
<CustomField>
    <fullName>BillingRequestMail__c</fullName>
    <label>自動請求依頼メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>