force-app/main/default/objects/NotificationTemplate__c/fields/BrrowerReceiptRemindFeed__c.field-meta.xml
<CustomField>
    <fullName>BrrowerReceiptRemindFeed__c</fullName>
    <label>借主控え督促Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>