force-app/main/default/objects/NotificationTemplate__c/fields/ConfirmationContractConditionFeed__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationContractConditionFeed__c</fullName>
    <label>契約条件確認Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>