force-app/main/default/objects/NotificationTemplate__c/fields/ConfirmationDunningApplicationChatter__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationDunningApplicationChatter__c</fullName>
    <label>確認書自動督促Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>