force-app/main/default/objects/NotificationTemplate__c/fields/ContactAccountCancelCalculateEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountCancelCalculateEmail__c</fullName>
    <label>企業に連絡（解約精算）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>