force-app/main/default/objects/NotificationTemplate__c/fields/ContactAccountConditionChangeEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountConditionChangeEmail__c</fullName>
    <label>企業に連絡（条件変更）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>