force-app/main/default/objects/NotificationTemplate__c/fields/ContactAccountConditionChangeFeed__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountConditionChangeFeed__c</fullName>
    <label>企業に連絡（条件変更）Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>