force-app/main/default/objects/NotificationTemplate__c/fields/ContactAccountGarageCertificationEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountGarageCertificationEmail__c</fullName>
    <label>企業に連絡（車庫証明）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>