force-app/main/default/objects/NotificationTemplate__c/fields/ContactAccountGarageCertificationFeed__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountGarageCertificationFeed__c</fullName>
    <label>企業に連絡（車庫証明）Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>