force-app/main/default/objects/NotificationTemplate__c/fields/ContactAccountNewMatterEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountNewMatterEmail__c</fullName>
    <label>企業に連絡（新規）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>