force-app/main/default/objects/NotificationTemplate__c/fields/ContactAccountNewMatterFeed__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountNewMatterFeed__c</fullName>
    <label>企業に連絡（新規）Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>