force-app/main/default/objects/NotificationTemplate__c/fields/ContactAccountRenewalEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountRenewalEmail__c</fullName>
    <label>企業に連絡（更新）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>