force-app/main/default/objects/NotificationTemplate__c/fields/ContractorChangeGuidanceFeed__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeGuidanceFeed__c</fullName>
    <label>名変案内Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>