force-app/main/default/objects/NotificationTemplate__c/fields/CostOccurrenceBillReceiptDunningFeed__c.field-meta.xml
<CustomField>
    <fullName>CostOccurrenceBillReceiptDunningFeed__c</fullName>
    <label>発生費用の請求書督促Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>