force-app/main/default/objects/NotificationTemplate__c/fields/CostOccurrenceWrritenEstimateDunning__c.field-meta.xml
<CustomField>
    <fullName>CostOccurrenceWrritenEstimateDunning__c</fullName>
    <label>発生費用の見積書督促メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>