force-app/main/default/objects/NotificationTemplate__c/fields/CostOccurrenceWrritenEstimateDunningFeed__c.field-meta.xml
<CustomField>
    <fullName>CostOccurrenceWrritenEstimateDunningFeed__c</fullName>
    <label>発生費用の見積書督促Chatterテンプレート</label>
    <length>255</length>
    <type>Text</type>
</CustomField>