force-app/main/default/objects/NotificationTemplate__c/fields/DecisionContactToEmployeeEmail__c.field-meta.xml
<CustomField>
    <fullName>DecisionContactToEmployeeEmail__c</fullName>
    <label>決定連絡（企業社員向け）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>