force-app/main/default/objects/NotificationTemplate__c/fields/DecisionRealEstateEmail__c.field-meta.xml
<CustomField>
    <fullName>DecisionRealEstateEmail__c</fullName>
    <label>決定物件登録メールテンプレート</label>
    <length>255</length>
    <type>Text</type>
</CustomField>