force-app/main/default/objects/NotificationTemplate__c/fields/EmployeeExplainEmail__c.field-meta.xml
<CustomField>
    <fullName>EmployeeExplainEmail__c</fullName>
    <label>社員説明メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>