force-app/main/default/objects/NotificationTemplate__c/fields/EmployeeExplainFeed__c.field-meta.xml
<CustomField>
    <fullName>EmployeeExplainFeed__c</fullName>
    <label>社員説明Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>