force-app/main/default/objects/NotificationTemplate__c/fields/GreetingChatter__c.field-meta.xml
<CustomField>
    <fullName>GreetingChatter__c</fullName>
    <label>挨拶連絡メール送信Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>