force-app/main/default/objects/NotificationTemplate__c/fields/GreetingChatterNoMediation__c.field-meta.xml
<CustomField>
    <fullName>GreetingChatterNoMediation__c</fullName>
    <label>挨拶連絡（斡旋なし）送信Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>