force-app/main/default/objects/NotificationTemplate__c/fields/GreetingChatterNoMediationDecisionRE__c.field-meta.xml
<CustomField>
    <fullName>GreetingChatterNoMediationDecisionRE__c</fullName>
    <label>挨拶連絡（斡旋無/物件決定済）送信Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>