force-app/main/default/objects/NotificationTemplate__c/fields/GreetingMail__c.field-meta.xml
<CustomField>
    <fullName>GreetingMail__c</fullName>
    <label>挨拶連絡メール送信メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>