force-app/main/default/objects/NotificationTemplate__c/fields/GreetingMailNoMediation__c.field-meta.xml
<CustomField>
    <fullName>GreetingMailNoMediation__c</fullName>
    <label>挨拶連絡（斡旋なし）メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>