force-app/main/default/objects/NotificationTemplate__c/fields/LegalApplicationApprovalNMSendEmail__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationApprovalNMSendEmail__c</fullName>
    <label>リーガル申請_承認後連絡(新規)メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>