force-app/main/default/objects/NotificationTemplate__c/fields/LegalApplicationApprovalRESendFeed__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationApprovalRESendFeed__c</fullName>
    <label>リーガル申請_承認後連絡(更新)Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>