force-app/main/default/objects/NotificationTemplate__c/fields/MediationRequestFeed__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestFeed__c</fullName>
    <label>斡旋依頼Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>