force-app/main/default/objects/NotificationTemplate__c/fields/MediationRequestMail__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestMail__c</fullName>
    <label>斡旋依頼メールテンプレート</label>
    <length>255</length>
    <type>Text</type>
</CustomField>