force-app/main/default/objects/NotificationTemplate__c/fields/MediationRequestOtherDecisionContact__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestOtherDecisionContact__c</fullName>
    <label>斡旋依頼他決連絡メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>