force-app/main/default/objects/NotificationTemplate__c/fields/MediationRequestReportNum__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestReportNum__c</fullName>
    <label>斡旋依頼帳票番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>