force-app/main/default/objects/NotificationTemplate__c/fields/MoveGuidanceFeed__c.field-meta.xml
<CustomField>
    <fullName>MoveGuidanceFeed__c</fullName>
    <label>入居案内Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>