force-app/main/default/objects/NotificationTemplate__c/fields/OnHoldCansellationDecisionApprovalEmail__c.field-meta.xml
<CustomField>
    <fullName>OnHoldCansellationDecisionApprovalEmail__c</fullName>
    <label>保留解除決裁承認メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>