force-app/main/default/objects/NotificationTemplate__c/fields/OnHoldCansellationRealEstateDecisionFeed__c.field-meta.xml
<CustomField>
    <fullName>OnHoldCansellationRealEstateDecisionFeed__c</fullName>
    <label>保留解除物件決定Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>