force-app/main/default/objects/NotificationTemplate__c/fields/OnHoldNoticeRealEstateDecisionEmail__c.field-meta.xml
<CustomField>
    <fullName>OnHoldNoticeRealEstateDecisionEmail__c</fullName>
    <label>保留通知物件決定メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>