force-app/main/default/objects/NotificationTemplate__c/fields/PersonalExpenseContactFeed__c.field-meta.xml
<CustomField>
    <fullName>PersonalExpenseContactFeed__c</fullName>
    <label>個人負担連絡Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>