force-app/main/default/objects/NotificationTemplate__c/fields/RefundBankGuideMail__c.field-meta.xml
<CustomField>
    <fullName>RefundBankGuideMail__c</fullName>
    <label>自動返金口座案内メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>