force-app/main/default/objects/NotificationTemplate__c/fields/RetireExpectedRemindChangeEmail__c.field-meta.xml
<CustomField>
    <fullName>RetireExpectedRemindChangeEmail__c</fullName>
    <label>退去申請督促メールテンプレート名（入替）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>