force-app/main/default/objects/NotificationTemplate__c/fields/RetireExpectedRemindEmail__c.field-meta.xml
<CustomField>
    <fullName>RetireExpectedRemindEmail__c</fullName>
    <defaultValue>&quot;なし&quot;</defaultValue>
    <label>退去申請督促メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>