force-app/main/default/objects/NotificationTemplate__c/fields/RetireExpectedRemindFeed__c.field-meta.xml
<CustomField>
    <fullName>RetireExpectedRemindFeed__c</fullName>
    <label>退去申請督促Chatterテンプレート</label>
    <type>TextArea</type>
</CustomField>