force-app/main/default/objects/NotificationTemplate__c/fields/SecurityDepositRefundReminderMail__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositRefundReminderMail__c</fullName>
    <label>敷金返金自動督促メールテンプレート名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>